# exca_dance

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  ROS2_CONTROL_DEBUG.md  SKILLS.md  _gen_sample1_bgm.py  capture_gameplay.py  capture_screenshot.py  error_log_20260407.md  exca_dance.spec  pyproject.toml  spike.py
.ocx/: receipt.jsonc
.opencode/: package-lock.json  package.json
.sisyphus/: boulder.json
.sisyphus/evidence/: f1-compliance.txt  f2-quality.txt  f3-qa.txt  f4-scope-v2.txt  f4-scope.txt  (+34 more)
data/: calibration.json  camera.json  game_settings.json  leaderboard.json  settings.json  volume.json
doc/: control_cmd구성방법.md  kine_publisher_node.py
runtime_hooks/: frozen_path.py
skills/: anti-patterns.md  architecture.md  audio-timing.md  core-game-logic.md  error-log.md  python-conventions.md  rendering-pipeline.md  ros2-bridge.md  testing.md  ui-screens.md
tests/: AGENTS.md  conftest.py  test_beatmap.py  test_bloom.py  test_game_loop.py  test_game_loop_real_mode.py  test_game_loop_safety_limits.py  test_game_settings.py  test_game_state.py  test_gamepad.py  test_gameplay_screen.py  test_hit_detection.py  test_joint_limits_config.py  test_keybinding.py  test_kinematics.py  test_leaderboard.py  test_overlay_2d.py  test_playback_speed.py  test_render_math.py  test_rendering_integration.py  test_ros2_bridge_real.py  test_ros2_interface.py  test_scoring.py  test_tutorial.py  test_urdf_kin.py  test_viewport_layout.py  test_visual_cues.py  test_volume.py
tools/: beatmap_sampler.py  joint_limit_editor.py  joint_limits.json  joint_marker.py  joint_markers.json
(+145 files in other folders)
